Fix new scene rendering on narrow screens

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -164,6 +164,7 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 .scene-panel {
 	max-width: 100%;
 	float: left;
+	margin: 0.5em;
 
 	.scene-title {
 		white-space: nowrap;
@@ -173,7 +174,12 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 	}
 
 	.new-trigger {
-		padding-top: 0.25em;
+		position: absolute;
+		right: 0;
+		top: 0px;
+		margin: 0.5em;
+		padding: 0.5em;
+		background: #f5f5f5;
 	}
 }
 
